# WaifuChatBotv2

./: ai_integration.py  gemini_integration.py  models.py  nozara_character.py  requirements.txt  utils.py
WaifuChatBot/: README.md  bot.py  bot_response_test.py  character.py  config.py  conversation.py  conversation_handler.py  custom_ai_integration.py  gemini_test.py  main.py  nlp_processor.py  pyproject.toml
