[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "backoff>=2.2.1",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "g4f>=0.5.0.4",
    "gunicorn>=23.0.0",
    "openai>=1.70.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot==13.7",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "telegram>=0.0.1",
]
